--- a/src/ex9_html-css-fundamentals-part1/task-03.html
+++ b/src/ex9_html-css-fundamentals-part1/task-03.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="task-03.css">
-	<title>Task-03</title>
-</head>
-<body>
-	<button>checkout</button>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="task-03.css" />
+    <title>Task-03</title>
+  </head>
+  <body>
+    <button>
+      <span class="buttonStar">★</span>
+      <span class="buttonContent">Checkout</span>
+      <span class="buttonStar">★</span>
+    </button>
+  </body>
 </html>
