--- a/src/kanban/index.html
+++ b/src/kanban/index.html
@@ -9,21 +9,25 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="task-03.css" />
+    <link rel="stylesheet" type="text/css" href="public/styles/style.css" />
     <title>Awesome Kanban Board</title>
   </head>
   <body>
     <header>
       <a id="appLogo" href="task-03.html">
-        <div id="logo"><img src="assets/images/logo.png" /></div>
+        <div id="logo"><img src="public/assets/images/logo.png" /></div>
         <div>Awesome Kanban Board</div>
       </a>
       <div id="headerRightItems">
         <div>
-          <button><img src="assets/images/add.png" />Create new list</button>
+          <button>
+            <img src="public/assets/images/add.png" />Create new list
+          </button>
         </div>
         <div id="userMenu">
-          <div id="userAvatar"><img src="assets/images/user-avatar.png" /></div>
+          <div id="userAvatar">
+            <img src="public/assets/images/user-avatar.png" />
+          </div>
           <div id="arrowDown">></div>
         </div>
       </div>
