feat: make dropdownUserMenu

--- a/src/kanban/index.html
+++ b/src/kanban/index.html
@@ -25,10 +25,12 @@
           </button>
         </div>
         <div id="userMenu">
-          <div id="userAvatar">
-            <img src="public/assets/images/user-avatar.png" />
+          <div>
+            <div id="userAvatar">
+              <img src="public/assets/images/user-avatar.png" />
+            </div>
+            <div id="arrowDown">></div>
           </div>
-          <div id="arrowDown">></div>
         </div>
       </div>
     </header>
@@ -42,5 +44,9 @@
       </div>
       <div>Kanban board by Ilia Pustograev, 2021</div>
     </footer>
+    <script
+      type="text/javascript"
+      src="public/scripts/dropdownUserMenu.js"
+    ></script>
   </body>
 </html>
