refactor: change file structure, make fixes

--- a/src/kanban/index.html
+++ b/src/kanban/index.html
@@ -9,12 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="public/styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="public/styles/main.css" />
     <title>Awesome Kanban Board</title>
   </head>
   <body>
-    <header>
-      <a id="appLogo" href="task-03.html">
+    <header id="header">
+      <a id="appLogo" href="index.html">
         <div id="logo"><img src="public/assets/images/logo.png" /></div>
         <div>Awesome Kanban Board</div>
       </a>
@@ -37,8 +37,8 @@
     <main>
       <div>Here will be main content</div>
     </main>
-    <footer>
-      <div id="statusTasks">
+    <footer id="footer">
+      <div id="footerStatusTasks">
         <div>Active tasks: <span id="activeTasks"></span></div>
         <div>Finished tasks: <span id="finishedTasks"></span></div>
       </div>
