feat: make createNewList function, refactor dropdownUserMenu

--- a/src/kanban/index.html
+++ b/src/kanban/index.html
@@ -14,9 +14,7 @@
   </head>
   <body>
     <header id="header"></header>
-    <main>
-      <div>Here will be main content</div>
-    </main>
+    <main id="main"></main>
     <footer id="footer"></footer>
     <script
       type="text/javascript"
@@ -24,7 +22,15 @@
     ></script>
     <script
       type="text/javascript"
+      src="public/scripts/components/createNewListButton.js"
+    ></script>
+    <script
+      type="text/javascript"
       src="public/scripts/dropdownUserMenu.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="public/scripts/createNewList.js"
     ></script>
     <script
       type="text/javascript"
