--- a/src/kanban/index.html
+++ b/src/kanban/index.html
@@ -28,10 +28,7 @@
       type="text/javascript"
       src="public/scripts/dropdownUserMenu.js"
     ></script>
-    <script
-      type="text/javascript"
-      src="public/scripts/createNewList.js"
-    ></script>
+    <script type="text/javascript" src="public/scripts/list.js"></script>
     <script
       type="text/javascript"
       src="public/scripts/components/footer.js"
