feat: change file structure, using components, start readme.md

--- a/src/kanban/index.html
+++ b/src/kanban/index.html
@@ -9,29 +9,13 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="public/styles/main.css" />
+    <link rel="stylesheet" type="text/css" href="src/styles/main.css" />
     <title>Awesome Kanban Board</title>
   </head>
   <body>
     <header id="header"></header>
     <main id="main"></main>
     <footer id="footer"></footer>
-    <script
-      type="text/javascript"
-      src="public/scripts/components/header.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="public/scripts/components/createNewListButton.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="public/scripts/dropdownUserMenu.js"
-    ></script>
-    <script type="text/javascript" src="public/scripts/list.js"></script>
-    <script
-      type="text/javascript"
-      src="public/scripts/components/footer.js"
-    ></script>
+    <script type="module" src="src/js/main.js"></script>
   </body>
 </html>
