feat: change file structure

--- a/src/kanban/index.html
+++ b/src/kanban/index.html
@@ -9,13 +9,13 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="src/styles/main.css" />
+    <link rel="stylesheet" type="text/css" href="./src/main.css" />
     <title>Awesome Kanban Board</title>
   </head>
   <body>
     <header id="header"></header>
     <main id="main"></main>
     <footer id="footer"></footer>
-    <script type="module" src="src/js/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
